refactor(test): 重构随机语言合约测试中的代码结构
- 移除未使用的 Collectors 和 assertNotNull 导入
- 将 Collectors.toList() 替换为更简洁的 toList() 方法
- 使用 switch 表达式替代传统的 if-else if 链
- 通过模式匹配简化节点端口查找逻辑
- 提高代码可读性和维护性